[gd_scene load_steps=2 format=3 uid="uid://dprjxafn4og3f"]

[ext_resource type="Script" uid="uid://pjdtyev8r5ub" path="res://UI/main_ui.gd" id="1_hvcg1"]

[node name="MainUI" type="CanvasLayer"]
script = ExtResource("1_hvcg1")

[node name="MainTitle" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 21
text = "Keep the Plant Alive
Until it Germinates!!"
horizontal_alignment = 1

[node name="Water" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -103.0
offset_right = 315.0
grow_vertical = 0

[node name="WaterSliderLabel" type="Label" parent="Water"]
layout_mode = 0
offset_left = 122.0
offset_top = 42.0
offset_right = 169.0
offset_bottom = 65.0
text = "Water"

[node name="WaterSlider" type="HSlider" parent="Water"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.5
offset_top = -29.0
offset_right = 130.5
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sunlight" type="Control" parent="Water"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 844.0
offset_top = -100.0
offset_right = 1159.0
offset_bottom = 3.0
grow_vertical = 0

[node name="SunlightSliderLabel" type="Label" parent="Water/Sunlight"]
layout_mode = 0
offset_left = 122.0
offset_top = 42.0
offset_right = 169.0
offset_bottom = 65.0
text = "Sunlight"

[node name="SunlightSlider" type="HSlider" parent="Water/Sunlight"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.5
offset_top = -29.0
offset_right = 130.5
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="value_changed" from="Water/WaterSlider" to="." method="_on_water_slider_value_changed"]
[connection signal="value_changed" from="Water/Sunlight/SunlightSlider" to="." method="_on_sunlight_slider_value_changed"]
